styles.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  font-family: Roboto, sans-serif;
}

h1 {
  margin: 0;
}

#root {
  position: relative;
  height: 100vh;
  width: 100vw;
}

#map {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: 0;
}

header {
  width: 30%;
  position: absolute;
  top: 12px;
  left: 12px;
  padding: 12px;
  background: #fff;
  border: 2px solid rgba(0,0,0,0.2);
  border-radius: 5px;
  background-clip: padding-box;
  z-index: 500;
}

@media (max-width: 600px) {
  header {
    width: 60%
  }
  
  h1 {
    font-size: 1.25rem;
  }
  
  p {
    font-size: 0.775rem;
  }
}

a {
  text-decoration: none;
  font-style: italic;
  color: black;
}

a:hover {
  text-decoration: underline;
}

/* custom classes */
.color-passed {
  color: #4dac26
}

.color-yet-to-pass {
  color: #d01c8b
}

/* override leaflet's <p> element styles */
.leaflet-popup-content > .popup-container p {
  margin: 0;
  padding: 0;
}

.popup-container {
  padding: 0;
  z-index: 7000;
}

.popup-container p.popup-title {
  font-size: 18px;
}

.popup-container p {
  padding-top: 12px;
}

.popup-container > div {
  padding-bottom: 12px;
}

.popup-container > div:last-of-type {
  padding-bottom: 0;
}

/* override leaflet popup styling */
.leaflet-popup-content-wrapper {
  background: transparent;
  box-shadow: none;
}

.leaflet-popup-tip-container {
  position: relative;
  top: 25px;
}

.leaflet-popup-close-button {
  display: none;
}

.popup-container {
  position: absolute;
  background: transparent;
  white-space: nowrap;
}

#aemp-infowindow-container {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.aemp-infowindow {
  position: absolute;
  right: 0;
  width: 350px;
  margin: 10px 10px 0 0;
  max-height: 95%;
  overflow-y: auto;
  padding: 15px;
  background: white;
  box-shadow: 0 3px 14px rgba(0,0,0,0.4);
}

a.aemp-infowindow-close {
  display: inline-block;
  float: right;
  font-style: normal;
}

.popup-container p.popup-title {
  padding: 5px 10px;
  border-radius: 10px;
  font-size: 15px;
  background: white;
}

/* Header & arrow icons */
#aemp-titlebox.collapsed > p {
  display: none;
}

a.arrow-container {
  float: right;
  padding-top: 10px;
}

i.arrow {
  border: solid black;
  border-width: 0 3px 3px 0;
  display: inline-block;
  padding: 3px;
}

.right {
  transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
}

.left {
  transform: rotate(135deg);
  -webkit-transform: rotate(135deg);
}

.up {
  transform: rotate(-135deg);
  -webkit-transform: rotate(-135deg);
}

.down {
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
}

/* Mobile styling */

@media (max-width: 640px) {

  #root.aemp-popupopen #map {
    height: 50%;
  }
  #root.aemp-popupopen .leaflet-control-attribution {
    display: none;
  }

  .leaflet-control-layers.leaflet-control-layers-expanded.leaflet-control {
    display: none;
  }

  header {
    top: 0;
    left: 0;
    width: 70%;
    margin: 10px;
  }

  a.arrow-container {
    padding-top: 5px;
  }

  .aemp-infowindow {
    left: 0;
    bottom: 0;
    margin: 0;
    width: 100%;
    height: 50%;
  }

}

